finish backblaze implementation
