# api/ChattO/API/openapi.yml
@@ -3,25 +3,6 @@ info:
   title: 'API, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null'
   version: '1.0'
 paths:
-  /api/Account/Test:
-    post:
-      tags:
-        - Account
-      requestBody:
-        content:
-          multipart/form-data:
-            schema:
-              type: object
-              properties:
-                file:
-                  type: string
-                  format: binary
-            encoding:
-              file:
-                style: form
-      responses:
-        '200':
-          description: Success
   /api/Account/Login:
     post:
       tags:
@@ -1375,6 +1356,38 @@ paths:
                 $ref: '#/components/schemas/ProblemDetails'
         '204':
           description: No Content
+  /api/Test/Download:
+    get:
+      tags:
+        - Test
+      parameters:
+        - name: profileId
+          in: query
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: Success
+  /api/Test/Upload:
+    post:
+      tags:
+        - Test
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                file:
+                  type: string
+                  format: binary
+            encoding:
+              file:
+                style: form
+      responses:
+        '200':
+          description: Success
   /api/Ticket:
     post:
       tags:
